--- a/evaluation.css
+++ b/evaluation.css
@@ -1,69 +1,120 @@
 .navbar-fixed-top {
-  min-height: 60px;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0%;
-  background-color: #FFFFFF;
-  border-color: #FFFFFF;
-  border-style: solid;
-  border-bottom: thin solid #DDDDDD;
+    min-height: 60px;
+    left: 0;
+    right: 0;
+    background-color: #FFFFFF;
+    border-color: #FFFFFF;
+    border-style: solid;
+    border-bottom: thin solid #DDDDDD;
 }
 
 .navbar-text {
-  text-align: center;
-  font-size: 20;
-  float: left;
+    text-align: center;
+    font-size: 20;
+    float: left;
 }
 
 .navbar-fixed-top .img-responsive {
-  max-width: 110px;
-  float: left;
+    max-width: 110px;
+    float: left;
 }
 
 .img-responsive {
-  padding-right: 10px;
+    padding-right: 10px;
 }
 
 html, body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
-  font-size: 16px;
-  color: #545454;
-  background-color: #F5F5F5;
-  font-weight: 300;
-  letter-spacing: 1px;
+    margin: 0;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    color: #545454;
+    background-color: #F5F5F5;
+    font-weight: 300;
+    letter-spacing: 1px;
 }
 
-.submitButton {
-  background-color: #66ccff;
-  border: none;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  font-family: 'Raleway', sans-serif;
-  display: inline-block;
-  font-size: 16px;
-  border-radius: 25px;
+#qa {
+    margin-top: 30px;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
 
-#heading {
-  text-align: center;
+.qa-table {
+    font-size: 16px;
+    border-collapse: collapse;
 }
+.qa-th, .qa-td {
+    border: 2px solid #bbbbbb;
+    padding: 10px 20px;
+}
+.qa-th {
+    background-color: #ffcc66;
+}
+.qa-td {
+    background-color: rgba(255, 204, 102, 0.5);
+}
+
+#triplet {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.triplet-span {
+    border: 4px solid #ffcc66;
+    padding: 10px 20px;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+}
+
+#ratings {
+    margin-top: 80px;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.rating-button {
+    border: none;
+    padding: 15px 30px;
+    text-align: center;
+    display: inline-block;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    border-radius: 20px;
+}
+
+.menu-button {
+    background-color: #bbbbbb;
+    padding: 10px 40px;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    font-family: 'Raleway', sans-serif;
+    display: inline-block;
+    font-size: 16px;
+}
+
+
 
 #art1 {
-  width:45%;
-  position: absolute;
-  left: 2%;
-  word-wrap: break-word;
-  padding-right: 1%;
-  padding-left: 1%;
-  border-style: groove;
-  background-color: #ffffff;
-  border-radius: 1%;
+    width: 45%;
+    position: absolute;
+    left: 2%;
+    word-wrap: break-word;
+    padding-right: 1%;
+    padding-left: 1%;
+    border-style: groove;
+    background-color: #ffffff;
+    border-radius: 1%;
 }
 
 #art2 {
@@ -78,8 +129,7 @@ body {
     border-radius: 1%;
 }
 
-
-#newArt1 {
+/*#newArt1 {
     float: left;
     width: 98%;
     padding: 1%
@@ -89,84 +139,73 @@ body {
 #newArt2 {
     float: left;
     width: 98%;
-    padding:1%;
+    padding: 1%;
 }
 
 .arttext {
-  white-space: pre-line;
+    white-space: pre-line;
 }
 
 .likeArt {
     text-align: center;
 }
 
-#ratings {
-  position: absolute;
-  top: 80px;
-  right: 0;
-  left: 0;
-  text-align: center;
-}
-
 #complete1, #complete2 {
-    display:none;
+    display: none;
 }
 
 #more1, #more2 {
-    background:lightblue;
-    color:navy;
-    font-size:13px;
-    cursor:pointer;
+    background: lightblue;
+    color: navy;
+    font-size: 13px;
+    cursor: pointer;
 }
-
 .title {
-  font-weight: bold;
-}
+    font-weight: bold;
+}*/
 
-/* Snack bar */
-/* The snackbar - position it at the bottom and in the middle of the screen */
 #snackbar {
-   visibility: hidden; /* Hidden by default. Visible on click */
-   min-width: 400px; /* Set a default minimum width */
-   margin-left: -200px; /* Divide value of min-width by 2 */
-   background-color: #333; /* Black background color */
-   color: #fff; /* White text color */
-   text-align: center; /* Centered text */
-   border-radius: 2px; /* Rounded borders */
-   padding: 8px; /* Padding */
-   position: fixed; /* Sit on top of the screen */
-   z-index: 1; /* Add a z-index if needed */
-   left: 50%; /* Center the snackbar */
-   bottom: 30px; /* 30px from the bottom */
+    visibility: hidden; /* hidden by default. Visible on click */
+    min-width: 400px; /* set a default minimum width */
+    margin-left: -200px; /* divide value of min-width by 2 */
+    background-color: #333; /* black background color */
+    color: #fff; /* white text color */
+    text-align: center; /* centered text */
+    border-radius: 2px; /* rounded borders */
+    padding: 8px; /* padding */
+    position: fixed; /* sit on top of the screen */
+    z-index: 1; /* add a z-index if needed */
+    left: 50%; /* center the snackbar */
+    bottom: 30px; /* 30px from the bottom */
 }
 
-/* Show the snackbar when clicking on a button (class added with JavaScript) */
+/* show the snackbar when clicking on a button (class added with JavaScript) */
 #snackbar.show {
-   visibility: visible; /* Show the snackbar */
+    visibility: visible; /* Show the snackbar */
 
-/* Add animation: Take 0.5 seconds to fade in and out the snackbar.
-However, delay the fade out process for 2.5 seconds */
-   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-   animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    /* add animation: take 0.5 seconds to fade in and out the snackbar.
+    however, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
-/* Animations to fade the snackbar in and out */
+/* animations to fade the snackbar in and out */
 @-webkit-keyframes fadein {
-   from {bottom: 0; opacity: 0;}
-   to {bottom: 30px; opacity: 1;}
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
 }
 
 @keyframes fadein {
-   from {bottom: 0; opacity: 0;}
-   to {bottom: 30px; opacity: 1;}
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
 }
 
 @-webkit-keyframes fadeout {
-   from {bottom: 30px; opacity: 1;}
-   to {bottom: 0; opacity: 0;}
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
 }
 
 @keyframes fadeout {
-   from {bottom: 30px; opacity: 1;}
-   to {bottom: 0; opacity: 0;}
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
 }
