--- a/evaluation.css
+++ b/evaluation.css
@@ -105,7 +105,7 @@ body {
 
 
 
-#art1 {
+/*#art1 {
     width: 45%;
     position: absolute;
     left: 2%;
@@ -129,7 +129,7 @@ body {
     border-radius: 1%;
 }
 
-/*#newArt1 {
+#newArt1 {
     float: left;
     width: 98%;
     padding: 1%
