--- a/evaluation.css
+++ b/evaluation.css
@@ -1,5 +1,5 @@
 .navbar-fixed-top {
-    min-height: 60px;
+    min-height: 75px;
     left: 0;
     right: 0;
     background-color: #FFFFFF;
@@ -10,16 +10,17 @@
 
 .navbar-text {
     text-align: center;
-    font-size: 20;
+    font-size: 20px;
     float: left;
 }
 
 .navbar-fixed-top .img-responsive {
-    max-width: 110px;
+    max-width: 140px;
     float: left;
 }
 
 .img-responsive {
+    padding-left: 10px;
     padding-right: 10px;
 }
 
@@ -47,6 +48,7 @@ body {
 .qa-table {
     font-size: 16px;
     border-collapse: collapse;
+    max-width: 1000px;
 }
 .qa-th, .qa-td {
     border: 2px solid #bbbbbb;
