completed syncing with temporary database

--- a/index.css
+++ b/index.css
@@ -45,6 +45,7 @@ body {
 
 #accBlock1, #accBlock2 {
     clear: both; 
+    margin-top: 30px;
     margin-left: auto; 
     margin-right: auto; 
     width: 400px;
