--- a/evaluation.css
+++ b/evaluation.css
@@ -106,7 +106,7 @@ body {
 }
 
 #snackbar {
-    visibility: hidden; /* hidden by default. Visible on click */
+    visibility: hidden; /* hidden by default but visible on click */
     min-width: 400px; /* set a default minimum width */
     margin-left: -200px; /* divide value of min-width by 2 */
     background-color: #333; /* black background color */
@@ -122,7 +122,7 @@ body {
 
 /* show the snackbar when clicking on a button (class added with JavaScript) */
 #snackbar.show {
-    visibility: visible; /* Show the snackbar */
+    visibility: visible; /* show the snackbar */
 
     /* add animation: take 0.5 seconds to fade in and out the snackbar.
     however, delay the fade out process for 2.5 seconds */
